# CanopyRS

./: .gitignore  .gitmodules  404.html  README.md  _version.py  cutout.py  fetch_geodata.py  index.html  infer.py  main.py  mkdocs.yml  morph.py  objects.inv  pyproject.toml  requirements.txt  requirements2.txt  segment_timeseries.py  setup.cfg  setup.py  sitemap.xml  train.py
.github/workflows/: mkdocs_deploy.yml
api/data-state/: index.html
api/pipeline/: index.html
canopyrs/: __init__.py
canopyrs/config/: __init__.py
canopyrs/engine/: constants.py  data_state.py  pipeline.py  pipeline_visualizer.py  raster_validation.py  utils.py
config/default/: __init__.py  aggregator_detector.yaml  aggregator_segmenter.yaml  detector.yaml  pipeline.yaml  segmenter.yaml
config/default_components/: segmenter_detectree2.yaml  segmenter_sam2.yaml  segmenter_sam2_train.yaml  segmenter_sam3.yaml
config/default_detection_multi_NQOS_best/: aggregator.yaml  pipeline.yaml  tilerizer.yaml
contributing/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: contributing.md  index.md
engine/: data_state.py  pipeline.py  utils.py
javascripts/: copy-config.js
scripts/: quick_dist.py  quick_viz.py  run_eva.sh  run_evalselvamask.py  tilerize_selvamask.py
search/: search_index.json
stylesheets/: extra.css
test/: README_TESTS.md  quick_eval.py  test_refactor_smoke.py  test_score_combination.py
tests/: __init__.py  conftest.py
tools/: find_optimal_detector_aggregator.py
video_segmentation/: adjust_masks_app.py  cutout.py  fetch_geodata.py  misalign.py  morph.py  segment_timeseries.py
(+388 files in other folders)
